--- a/styles.css
+++ b/styles.css
@@ -478,6 +478,7 @@ button:active {
     border-radius: 50px;
     border:none;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .resume:hover {
